:sparkles: Support Cell Analysis